--- a/index.html
+++ b/index.html
@@ -7,6 +7,63 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 p-8">
+    <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+    <!-- Form Section -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+        <h2 class="text-2xl font-bold mb-6 text-center">Student Registration</h2>
+        <form id="studentForm" class="space-y-4">
+            <div>
+                <label class="block mb-2">Name</label>
+                <input 
+                    type="text" 
+                    id="name" 
+                    class="w-full p-2 border rounded"
+                    required
+                >
+            </div>
+            <div>
+                <label class="block mb-2">Email</label>
+                <input 
+                    type="email" 
+                    id="email" 
+                    class="w-full p-2 border rounded"
+                    required
+                >
+            </div>
+            <div>
+                <label class="block mb-2">Age</label>
+                <input 
+                    type="number" 
+                    id="age" 
+                    class="w-full p-2 border rounded"
+                    required
+                >
+            </div>
+            <div>
+                <label class="block mb-2">Course</label>
+                <select 
+                    id="course" 
+                    class="w-full p-2 border rounded"
+                    required
+                >
+                    <option value="">Select Course</option>
+                    <option value="Computer Science">Computer Science</option>
+                    <option value="Mathematics">Mathematics</option>
+                    <option value="Physics">Physics</option>
+                    <option value="Chemistry">Chemistry</option>
+                </select>
+            </div>
+            <button 
+                type="submit" 
+                class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600"
+            >
+                Register Student
+            </button>
+        </form>
+    </div>
+
+
     
+        </div>
 </body>
 </html>
