--- a/index.html
+++ b/index.html
@@ -63,7 +63,24 @@
     </div>
 
 
-    
+       <!-- Table Section -->
+       <div class="bg-white p-6 rounded-lg shadow-md">
+        <h2 class="text-2xl font-bold mb-6 text-center">Student List</h2>
+        <table class="w-full" id="studentTable">
+            <thead>
+                <tr class="bg-gray-100">
+                    <th class="p-2 border">Name</th>
+                    <th class="p-2 border">Email</th>
+                    <th class="p-2 border">Age</th>
+                    <th class="p-2 border">Course</th>
+                    <th class="p-2 border">Actions</th>
+                </tr>
+            </thead>
+            <tbody id="studentTableBody">
+                <!-- Students will be added here dynamically -->
+            </tbody>
+        </table>
+    </div>
         </div>
 </body>
 </html>
